[package]
name = "neighbor3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
trillium = "0.2"
trillium-tokio = "0.2"
trillium-logger = "0.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "uuid" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
